# akuire

./: .gitignore  README.md  acq.py  acq_path.py  chat.py  napari.py  pyproject.toml  smlm_microscope.py  test.npy  virtual.py  z.py
.github/workflows/: deploy.yaml  docker-master.yaml
akuire/: __init__.py  acquisition.py  config.py  engine.py  errors.py  vars.py
akuire/assets/: utils.py
akuire/compilers/: default.py
akuire/composition/: __init__.py  composer.py  helpers.py
akuire/events/: __init__.py  data_event.py  manager_event.py
akuire/helpers/: __init__.py  base.py
akuire/managers/: base.py  delay.py
akuire/managers/generic/: delay.py
akuire/managers/rest/: rest_manager.py
akuire/managers/testing/: __init__.py  errors.py  faulty_camera.py  non_sweepable.py  stage.py  sweepable.py  zstage.py
akuire/managers/uc2/: cam.py  serial.py
akuire/managers/virtual/: dd  smlm_microscope.py  virtual_microscope.py
examples/: follow_a_path.py  interrupt_on_scream.py  smart_smlm_microscope.py
tests/: conftest.py  test_composition.py  test_engine.py  test_interrupting.py  test_multi.py  test_retry.py  test_sync.py
